# f15se2-re

./: 1.diff  AGENTS.md  ANALYSIS_GUIDE.md  CMakeLists.txt  F15_SE2_DETAILED_FUNCTIONS.md  F15_SE2_FUNCTION_INDEX.md  F15_SE2_REVERSE_ENGINEERING_GUIDE.md  F15_SE2_REVERSE_ENGINEERING_SUMMARY.md  LOG.TXT  Makefile  T.COD  TODO_AUTOMATION.md  TT.C  VERIFICATION_DEBUG_GUIDE.md  _error.txt  _error_.txt  _pr.txt  _rename.sh  debug_angle  debug_angle.c  decompile.md  egame_rc.lst  game_logic_extraction_plan.md  identify_compiler_flags.md  official_guides.md  prompt.txt  result.txt  snake_.c  start4.lst  start_rc.lst  step_by_step.txt  x16_samples  РУКОВОДСТВО_ПО_АНАЛИЗУ.md
COMPILER/: LOG.TXT  RESULT.TXT  _md5.txt  consol.py  consolidated_training_data.asm  consolidated_training_data.json  output.tar.bz2  run_tests.py  testflag.c
conf/: egame_rc.json
dbuild/: LOG.TXT  test.rsp
docs/: .~lock.F15-StrikeEagleII-ReferenceCard.docx#  F15-StrikeEagleII-DesertStorm.docx  F15-StrikeEagleII-Manual.docx  F15-StrikeEagleII-ReferenceCard.docx  F15-StrikeEagleII-TechnicalSupplement.docx
docs/msc/: 286.txt  C5L.txt  F15SE2_Decompilation_Guide.md  cadvisor.txt  cadvprg.txt  cinstall.txt  clibref.txt  cref.txt  ctoolkit.txt
docs/www.flightsimbooks.com/f15strikeeagle/: 01_01_Historical_Overview.php  01_02_U.S._Air_Force.php  01_03_Development_of_the_Air_Force.php  01_04_Summary_of_F-15.php  02_01_The_F-15_Version.php  02_02_The_DRF_(Dual-Role_Fighter)_Program.php  02_03_Future_Modifications.php  03_01_Air_Combat_Orientation.php  03_02_Air_Combat-Related_Aerodynamics.php  03_03_The_Fighter_Pilots_Mission.php  03_04_Air_Combat_Basics.php  04_01_Basic_Flight_Maneuvers.php  04_02_F-15_Strike_Eagle_I.php  04_03_F-15_Strike_Eagle_II.php  04_04_Aileron_Roll.php  04_05_The_Barrel_Roll.php  04_06_The_Loop.php  04_07_The_Break_Turn.php  04_08_Split-S_or_Descending_Half-Loop.php  04_09_Vertical_Half-Loop_or_Immelmann.php  04_10_The_Stall_Turn.php  04_11_Inverted_Flight_Practice.php  04_12_Speedbrake_Extension.php  04_13_ACM_Checkride_l.php  05_01_Advanced_Maneuvers.php  05_02_Offensive_Maneuvers.php  05_03_ACM_Checkride_2.php  05_04_Defensive_Maneuvers.php  05_05_ACM_Checkride_3.php  05_06_Head-On_Maneuvers.php  05_07_ACM_Checkride_4.php  06_01_Winning_Tactics_for_the_Original.php  06_02_Weapons_Use.php  06_03_Defensive_Considerations.php  06_04_Multiple_Bogey_Situations.php  07_01_General_Tips_Hints_and_Game_Information.php  07_02_Accidental_Ejection.php  07_03_Air_Combat_Mode_Only.php  07_04_Accumulating_Points.php  07_05_Bail-Out.php  (+61 more)
f14/: 3dobject.asm  EGAME_.pat  _makesig.sh  compare_pat.py  dosbuild_dosemu.sh  f14.pat  flair  igor.patch  my.diff  target_3DOBJECT.pat  target_3DPLANES.pat  target_AWACS.pat  target_FLTMATH.pat  target_MESSAGE.pat  target_NJOYCAL.pat  target_SUPPORT.pat
f14/src/: 3DOBJECT.ASM  3DOBJECT.C  3DOBJECT.COD  3DPLANES.ASM  3DPLANES.C  3DPLANES.COD  AWACS.ASM  AWACS.C  AWACS.COD  BIOSFUNC.COD  DEBUG.COD  DOSFUNC.COD  F15.COD  FLTMATH.C  FLTMATH.COD  FLTMATH_.C  FLTMATH_.COD  HELLO.COD  HELLOLIB.COD  LIBC.COD  MESSAGE.COD  NJOYCAL.COD  OUTPUT.COD  OVERLAY.COD  SUPPORT.COD  TEST.COD  TEST2.COD  UTIL.COD  VGAPAL.COD  _names.txt  all_cod.txt  f14release.pat
lst/: egame.idc
map/: egame.map  egame.map.dup  egame.map.txt
msex/: ALLOC.COD  BMBLIB.COD  GROUND.COD  OBJECTS.COD  SPRITES.COD  SWASYNIO.COD  SWAUTO.COD  SWCOLLSN.COD  SWDISP.COD  SWEND.COD  SWGAMES.COD  SWGROUND.COD  SWGRPHA.COD  SWINIT.COD  SWMAIN.COD  SWMISC.COD  SWMOVE.COD  SWMULTIO.COD  SWOBJECT.COD  SWPLANES.COD  SWSOUND.COD  SWSYMBOL.COD  SWTITLE.COD  TEST.COD  _INTC.COD  dlb.c  motfad.c  motfad.h  motfsm.c  motfsm.h  mots1.c  motsho.c  mottest.c  tgui1.c  tgui2.c  tgui3.c
output/: rename_symbols.idc
site/neuviemeporte.github.io/: feed.xml  index.html
site/neuviemeporte.github.io/assets/: main.css
site/neuviemeporte.github.io/category/: f15-se2.html  other  sw-eng
site/neuviemeporte.github.io/f15-se2/2022/06/05/: origins.html
site/neuviemeporte.github.io/f15-se2/2022/12/08/: firstlook.html
site/neuviemeporte.github.io/f15-se2/2022/12/09/: reversing-1.html  reversing-2.html  reversing-3.html
site/neuviemeporte.github.io/f15-se2/2023/03/23/: farcalls.html
site/neuviemeporte.github.io/f15-se2/2023/05/17/: compiler.html
site/neuviemeporte.github.io/f15-se2/2023/05/18/: compiler2.html
site/neuviemeporte.github.io/f15-se2/2023/07/12/: overlays.html
site/neuviemeporte.github.io/f15-se2/2023/07/13/: imatching.html
site/neuviemeporte.github.io/f15-se2/2023/09/02/: compiler3.html
site/neuviemeporte.github.io/f15-se2/2023/09/25/: reassembly.html
site/neuviemeporte.github.io/f15-se2/2023/10/06/: linking.html
site/neuviemeporte.github.io/f15-se2/2023/11/08/: imatching2.html
site/neuviemeporte.github.io/f15-se2/2023/12/30/: unlink.html
src/: 014623DB  1.txt  EGAME12.COD.txt  _names.py  _names.txt  _names_.py  _names_sol.txt  _namesf14.txt  _namesz3.py  _namesz32.py  _namesz32_.py  _rename.py  _sol2.txt  _sol3.txt  _sol34.txt  _z3_psw.py  all_cod.txt  egame.h  egame0.c  egame1.c  egame11.c  egame12.c  egame13.c  egame2.c  egame4.c  egame5.c  egame6.c  egame7.c  egame_rc.asm  egdata.c  egflight.c  egmath.c  fixed_math.hpp  gfx_impl.c  inttype.h  reorder.py  slot.h  stgen.c  strand.c  struct.h
src/compat64/: dos.h
tests/: fixed_math_tests.cpp  original_fixed_math_compare_tests.cpp  test_e0.c  test_e11.c  test_e13.c  test_e2.c  test_e3.c  test_toolkit_heuristics.py
tools/: adjust_function.py  conf_edit.py  correlation_analyzer.py  decomp_workflow.py  donor_search.py  function_catalog.py  generate_idc.py  hint_pressure.py  name_checker.py  name_parser.py  ptr_hints.py  translate_function.py  verify_function.py
x16_samples/: ICOMBI.LST  ICOMDO.LST  IHOD.MAP  ILOT.COD  ILOT.MAP  IMOD.MAP  IMOT.COD  IMOT.MAP  IMOX.COD  ISOD.COD  ISOT.COD  ISOX.COD  README.md  build_matrix.sh
x16_samples.backup_2026-03-20/: COMTEST.BAT  ICOMBI.ASM  ICOMBI.COM  ICOMBI.LST  ICOMDO.ASM  ICOMDO.COM  IDEMO.C  IHOD.COD  IMOD.COD  ISOD.MAP  ISOT.MAP  build_matrix.sh  matrix_manifest.json
(+16 files in other folders)
